--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.15.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@tanstack/react-query": "^5.72.2",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
     "mongoose": "^8.13.2",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
